--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<h1 class="m-b-20"><strong>Bienvenidos a <br> AKELARRE</strong></h1>
-							<a class="btn btn-lg btn-circle btn-outline-new-white" href="#">Reservation</a></p>
+							<a class="btn btn-lg btn-circle btn-outline-new-white" href="https://www.eltenedor.es/restaurante/akelarre-r613725/" target="_blank">Reservation</a>
 						</div>
 					</div>
 				</div>
@@ -53,7 +53,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<h1 class="m-b-20"><strong>Welcome To <br> AKELARRE</strong></h1>
-							<a class="btn btn-lg btn-circle btn-outline-new-white" href="#">Reservation</a></p>
+							<a class="btn btn-lg btn-circle btn-outline-new-white" href="https://www.eltenedor.es/restaurante/akelarre-r613725/" target="_blank">Reservation</a>
 						</div>
 					</div>
 				</div>
@@ -123,7 +123,7 @@
 					<div class="overflow-hidden">
 						<h4>Email</h4>
 						<p class="lead">
-							akelarre.bcn@gmail.com
+							akelarre.barcelona@gmail.com
 						</p>
 					</div>
 				</div>
