--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="special-menu text-center">
-                    <img style="max-width: 100%" src="imagesAkelarre/akelarre-01.jpg">
+                    <img style="max-width: 100%; box-shadow: 1px 1px 0.5px grey" src="imagesAkelarre/akelarre-01.jpg">
                 </div>
 				<div class="special-menu text-center">
-					<img style="max-width: 100%; margin-top: 20px" src="imagesAkelarre/akelarre-02.jpg">
+					<img style="max-width: 100%; box-shadow: 1px 1px 0.5px grey" src="imagesAkelarre/akelarre-02.jpg">
 				</div>
             </div>
         </div>
@@ -147,11 +147,11 @@
 			<div class="row">
 				<div class="col-lg-3 col-md-6">
 					<h3>Horario</h3>
-					<p><span class="text-color">Lunes a Viernes :</span></p>
+					<p class="lead"><span class="text-color">Lunes a Viernes :</span></p>
 					<p>7:00 am - 12:00 pm</p>
-					<p><span class="text-color">Sabado :</span></p>
+					<p class="lead"><span class="text-color">Sabado :</span></p>
 					<p>09:00 am - 12:00 pm</p>
-					<p><span class="text-color">Domingo: </span></p>
+					<p class="lead"><span class="text-color">Domingo: </span></p>
 					<p>Cerrado</p>
 				</div>
 				<div class="col-lg-3 col-md-6">
