added menu link position into the html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 					<div class="row">
 						<div class="col-md-12">
 							<h1 class="m-b-20"><strong>Bienvenidos a <br> AKELARRE</strong></h1>
-							<a class="btn btn-lg btn-circle btn-outline-new-white" href="https://www.eltenedor.es/restaurante/akelarre-r613725/" target="_blank">Reservation</a>
+							<a class="btn btn-lg btn-circle btn-outline-new-white" href="#menu-box">La Carta</a>
+							<a class="btn btn-lg btn-circle btn-outline-new-white" href="https://www.eltenedor.es/restaurante/akelarre-r613725/" target="_blank">Reservar</a>
 						</div>
 					</div>
 				</div>
@@ -53,6 +54,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<h1 class="m-b-20"><strong>Welcome To <br> AKELARRE</strong></h1>
+							<a class="btn btn-lg btn-circle btn-outline-new-white" href="#menu-box">Menu</a>
 							<a class="btn btn-lg btn-circle btn-outline-new-white" href="https://www.eltenedor.es/restaurante/akelarre-r613725/" target="_blank">Reservation</a>
 						</div>
 					</div>
@@ -64,7 +66,8 @@
 					<div class="row">
 						<div class="col-md-12">
 							<h1 class="m-b-20"><strong> Benvinguts a <br> AKELARRE</strong></h1>
-							<a class="btn btn-lg btn-circle btn-outline-new-white" href="https://www.eltenedor.es/restaurante/akelarre-r613725/" target="_blank">Reservation</a>
+							<a class="btn btn-lg btn-circle btn-outline-new-white" href="#menu-box">La Carta</a>
+							<a class="btn btn-lg btn-circle btn-outline-new-white" href="https://www.eltenedor.es/restaurante/akelarre-r613725/" target="_blank">Reservar</a>
 						</div>
 					</div>
 				</div>
@@ -76,10 +79,9 @@
 		</div>
 	</div>
 	<!-- End slides -->
-
 	
 	<!-- Start Menu -->
-	<div class="menu-box">
+	<div class="menu-box" id="menu-box">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
