Txt Style-la carta

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="heading-title text-center">
-						<h2>La Carta</h2>
-						<!--  <p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>-->
+						<h2>LA CARTA</h2>
+						<p>IVA incl.</p>
                     </div>
             </div>
         </div>
