--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<div class="col-md-12">
 							<h1 class="m-b-20"><strong>Bienvenidos a <br> AKELARRE</strong></h1>
 							<a class="btn btn-lg btn-circle btn-outline-new-white" href="#menu-box">La Carta</a>
-							<a class="btn btn-lg btn-circle btn-outline-new-white" href="https://www.eltenedor.es/restaurante/akelarre-r613725/" target="_blank">Reservar</a>
+							<a class="btn btn-lg btn-circle btn-outline-new-white" href="https://reservation.dish.co/widget/hydra-35c6827c-61e4-4636-9c9c-e62fa8fc71a8" target="_blank">Reservar</a>
 						</div>
 					</div>
 				</div>
@@ -55,7 +55,7 @@
 						<div class="col-md-12">
 							<h1 class="m-b-20"><strong>Welcome To <br> AKELARRE</strong></h1>
 							<a class="btn btn-lg btn-circle btn-outline-new-white" href="#menu-box">Menu</a>
-							<a class="btn btn-lg btn-circle btn-outline-new-white" href="https://www.eltenedor.es/restaurante/akelarre-r613725/" target="_blank">Reservation</a>
+							<a class="btn btn-lg btn-circle btn-outline-new-white" href="https://reservation.dish.co/widget/hydra-35c6827c-61e4-4636-9c9c-e62fa8fc71a8" target="_blank">Reservation</a>
 						</div>
 					</div>
 				</div>
@@ -67,7 +67,7 @@
 						<div class="col-md-12">
 							<h1 class="m-b-20"><strong> Benvinguts a <br> AKELARRE</strong></h1>
 							<a class="btn btn-lg btn-circle btn-outline-new-white" href="#menu-box">La Carta</a>
-							<a class="btn btn-lg btn-circle btn-outline-new-white" href="https://www.eltenedor.es/restaurante/akelarre-r613725/" target="_blank">Reservar</a>
+							<a class="btn btn-lg btn-circle btn-outline-new-white" href="https://reservation.dish.co/widget/hydra-35c6827c-61e4-4636-9c9c-e62fa8fc71a8" target="_blank">Reservar</a>
 						</div>
 					</div>
 				</div>
