--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
 	<div id="slides" class="cover-slides">
 		<ul class="slides-container">
 			<li class="text-center">
+				<img src="images/slider-04.jpg" alt="">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-12">
+							<h1 class="m-b-20"><strong> Benvinguts a <br> AKELARRE</strong></h1>
+							<a class="btn btn-lg btn-circle btn-outline-new-white" href="#menu-box">La Carta</a>
+							<a class="btn btn-lg btn-circle btn-outline-new-white" href="https://reservation.dish.co/widget/hydra-35c6827c-61e4-4636-9c9c-e62fa8fc71a8" target="_blank">Reservar</a>
+						</div>
+					</div>
+				</div>
+			</li>
+			<li class="text-center">
 				<img src="images/slider-01.jpg" alt="">
 				<div class="container">
 					<div class="row">
