--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<div id="slides" class="cover-slides">
 		<ul class="slides-container">
 			<li class="text-center">
-				<img src="images/slider-04.jpg" alt="">
+				<img src="images/slider-04.jpg" alt="" class="responsive">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
@@ -49,7 +49,7 @@
 				</div>
 			</li>
 			<li class="text-center">
-				<img src="images/slider-01.jpg" alt="">
+				<img src="images/slider-01.jpg" alt="" class="responsive">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
@@ -61,7 +61,7 @@
 				</div>
 			</li>
 			<li class="text-center">
-				<img src="images/slider-02.jpg" alt="">
+				<img src="images/slider-02.jpg" alt="" class="responsive">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
@@ -73,7 +73,7 @@
 				</div>
 			</li>
 			<li class="text-center">
-				<img src="images/slider-03.jpg" alt="">
+				<img src="images/slider-03.jpg" alt="" class="responsive">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
